--- a/src/app/pages/favorites/favorites.page.scss
+++ b/src/app/pages/favorites/favorites.page.scss
@@ -25,12 +25,12 @@ ion-label {
   margin: 0 0 0 10px;
 
   h1 {
-    font-size: 17px;
-    line-height: 1.4;
+    font-size: 16px;
+    line-height: 1.2;
   }  
   h2 {
-    font-size: 17px;
-    line-height: 1.4;
+    font-size: 16px;
+    line-height: 1.2;
   }
 }
 
@@ -39,9 +39,16 @@ ion-toggle {
 }
 
 ion-fab-button {
+  margin-left: 2px;
+  margin-top: 0px;
+  margin-bottom: 0px;
   --border-radius: 40px;
   --background: var(--ion-avatar-bg-color, #d7d8da);
   --box-shadow: 0px;
   --background-activated:var(--ion-color-primary, #000000);
   --background-activated-opacity: 100%;
+}
+
+.ion-activated {
+  --transform: scale(1.0); // disable animation of dab button
 }
